# kicli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  RESEARCH.md  SKILLS.md  report.md  smoke-erc.rpt  test.md
.github/workflows/: release.yml
cmake/: embed_skills.cmake
include/kicli/: catalog.h  config.h  error.h  fetch.h  import.h  jlcpcb.h  kicad_cli.h  portable.h  sch.h  sch_ops.h  stock.h
scripts/: compat-test.sh
src/: config.c  error.c  main.c  portable.c
src/catalog/: catalog.c
src/fetch/: fetch.c  registry.c
src/fetch/sources/: digikey.c  lcsc.c  snapeda.c
src/import/: import.c
src/jlcpcb/: jlcpcb.c
src/kicad/: kicad_cli.c
src/project/: project.c
src/sch/: dump.c  sch.c  sexpr.c  sexpr_write.c
src/sch/ops/: check.c  draw.c  sch_common.c  set.c
src/sch/parser/: mod.rs  model.c  sexpr.rs  sym_lib.c
src/stock/: stock.c
tests/: test_sch.c
